--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 
-            <a class="navbar-brand" href="https://daviesdigitaldesign.com/home"> <img class="logo-full__blue" src="Images/Full logo blue.svg" ></a>
+            <a class="navbar-brand" href="https://daviesdigitaldesign.com"> <img class="logo-full__blue" src="Images/Full logo blue.svg" ></a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 6h-24v-4h24v4zm0 4h-24v4h24v-4zm0 8h-24v4h24v-4z" style="fill: #0056ff;"/></svg>
+                        <svg xmlns="https://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 6h-24v-4h24v4zm0 4h-24v4h24v-4zm0 8h-24v4h24v-4z" style="fill: #0056ff;"/></svg>
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -201,7 +201,7 @@
     <div class="wrapper">
         <div class="footer-content">
             <footer>
-                <a href="https://daviesdigitaldesign.com/home"><img class="logo__blue" src="/Images/Logo Blue.svg" alt="logo__blue"></a>
+                <a href="https://daviesdigitaldesign.com"><img class="logo__blue" src="/Images/Logo Blue.svg" alt="logo__blue"></a>
                 <ul>
                     <li> <a href="tel:+353 86 323 2181">+353 86 323 2181</a> </li>
                     <li> <a href="mailto:info@daviesdigitaldesign.com">info@daviesdigitaldesign.com</a> </li>
