--- a/portfolio.html
+++ b/portfolio.html
@@ -20,10 +20,10 @@ overflow-x: hidden;">
 
     <nav class="navbar navbar-expand-lg navbar-white">
         <div class="container-fluid">  
-        <a class="navbar-brand" href="https://daviesdigitaldesign.com/home"> <img class="logo-full__blue" src="Images/Full Logo White.svg" ></a>
+        <a class="navbar-brand" href="https://daviesdigitaldesign.com"> <img class="logo-full__blue" src="Images/Full Logo White.svg" ></a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 6h-24v-4h24v4zm0 4h-24v4h24v-4zm0 8h-24v4h24v-4z" style="fill: white;"/></svg>
+                    <svg xmlns="https://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 6h-24v-4h24v4zm0 4h-24v4h24v-4zm0 8h-24v4h24v-4z" style="fill: white;"/></svg>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -42,7 +42,7 @@ overflow-x: hidden;">
                     </li>
             
                     <li class="nav-item">
-                        <a class="nav-link" href="https://daviesdigitaldesign.com/home#Contact-us">Contact</a>
+                        <a class="nav-link" href="https://daviesdigitaldesign.com#Contact-us">Contact</a>
                     </li>
 
                     </ul>
@@ -262,7 +262,7 @@ overflow-x: hidden;">
     <div class="footer">
         <div class="wrapper">
         <footer class="footer-white">
-            <a href="https://daviesdigitaldesign.com/home"><img class="logo__white" src="/Images/Logo White.svg" alt="logo__blue"></a>
+            <a href="https://daviesdigitaldesign.com"><img class="logo__white" src="/Images/Logo White.svg" alt="logo__blue"></a>
             <ul>
                 <li> <a href="tel:+353 86 323 2181">+353 86 323 2181</a> </li>
                 <li> <a href="mailto:info@daviesdigitaldesign.com">info@daviesdigitaldesign.com</a> </li>
