--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             
-        <a class="navbar-brand" href="https://daviesdigitaldesign.com/home"> <img class="logo-full__blue" src="Images/Full logo blue.svg" ></a>
+        <a class="navbar-brand" href="https://daviesdigitaldesign.com"> <img class="logo-full__blue" src="Images/Full logo blue.svg" ></a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                     <svg xmlns="https://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 6h-24v-4h24v4zm0 4h-24v4h24v-4zm0 8h-24v4h24v-4z" style="fill: #0056ff;"/></svg>
