--- a/portfolio.html
+++ b/portfolio.html
@@ -130,7 +130,7 @@ overflow-x: hidden;">
                 </div>
                 <div class="showcase-background" style=" width: 100%; height: 100%; background-color: rgb(248, 231, 210);">
                     <div class="image-wrapper">
-                        <img src="Images/Portfolio/Giles & Grace-logo-colour.svg" alt="">
+                        <img src="Images/Portfolio/Giles _ Grace-logo-colour.svg" alt="">
                     </div>
                 </div>
             </div>
